--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "styled-components": "^5.3.3",
+    "typescript-styled-plugin": "^0.18.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
